añadida pagina agradecimiento y corregido funcionamient formulario

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                                     </div>
                                 
                                     <!-- Ocultos para configuración -->
-                                    <input type="hidden" name="_next" value="http://localhost/portfolioWeb/contact.html">
+                                    <input type="hidden" name="_next" value="https://alcugan.github.io/Sitio-web-personal/gracias.html">
                                     <input type="hidden" name="_captcha" value="false">
                                     
                                     <!-- Botón de envío -->
