--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+        <link href="css/custom.css" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -26,7 +27,7 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Curriculum</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projectos</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
@@ -185,7 +186,7 @@
                                 <p class="lead fw-light mb-4">Busco una oportunidad de prácticas donde seguir creciendo como desarrollador. <br>
                                     Soy una persona responsable, con muchas ganas de mejorar y aprender del equipo.<br>
                                     Nivel de inglés B2, ideal para entornos técnicos y comunicarme en contextos profesionales. 
-                                    <br>Tengo varios trabajos subidos en el portfolio y GitHub.</p>
+                                    <br>Tanto aquí como en mi GitHub podrás encontrar mis projectos.</p>
                                 <p class="text-muted">Java, SpringBoot, Python, Kotlin, MySQL, HTML5, CSS3, JavaScript, PHP, BootStrap, Android Stuido, Git/Github, Office 365, Cisco Packet Tracer, Software de Virtualización, VSC.  </p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://github.com/Alcugan"><i class="bi bi-github"></i></a>
@@ -201,7 +202,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Álvaro Radu - Portfolio</div></div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Álvaro Radu - Portfolio 2025</div></div>
                     <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
