--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Álvaro Radu - Portfolio</title>
+        <!-- Simple Lightbox CSS -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.min.css" rel="stylesheet" />
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
@@ -16,6 +18,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/custom.css" rel="stylesheet">
+        <link href="css/estilos-para-galeria.css" rel="stylesheet">
     </head>
     <body class="d-flex flex-column h-100 bg-light">
         <main class="flex-shrink-0">
@@ -28,48 +32,74 @@
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Curriculum</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projectos</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="projects.html">Projectos</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
             <!-- Projects Section-->
-            <section class="py-5">
-                <div class="container px-5 mb-5">
-                    <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projectos</span></h1>
-                    </div>
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-11 col-xl-9 col-xxl-8">
-                            <!-- Project Card 1-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Sistema Ventas</h2>
-                                            <p>Este proyecto es un sistema de administración de bases de datos desarrollado en Java, diseñado específicamente para gestionar datos empresariales como clientes, proveedores, productos y más. Implementa operaciones CRUD (Crear, Leer, Actualizar y Eliminar) y garantiza la seguridad de los datos mediante un sistema de autenticación con inicio de sesión.</p>
-                                        </div>
-                                        <img class="img-fluid" src="assets/SistVent.png" alt="..." />
-                                    </div>
-                                </div>
+<section class="py-5">
+    <div class="container px-5 mb-5">
+        <div class="text-center mb-5">
+            <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projectos</span></h1>
+        </div>
+        <div class="row gx-5 justify-content-center">
+            <div class="col-lg-11 col-xl-9 col-xxl-8">
+                <!-- Project Card 1-->
+                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                    <div class="card-body p-0">
+                        <div class="d-flex align-items-center">
+                            <div class="p-5">
+                                <h2 class="fw-bolder">
+                                    <a href="https://github.com/Alcugan/SistemaVentas.git">
+                                        Sistema Ventas
+                                    </a>
+                                </h2>
+                                <p>Este proyecto es un sistema de administración de bases de datos desarrollado en Java, diseñado específicamente para gestionar datos empresariales como clientes, proveedores, productos y más. Implementa operaciones CRUD (Crear, Leer, Actualizar y Eliminar) y garantiza la seguridad de los datos mediante un sistema de autenticación con inicio de sesión.</p>
                             </div>
-                            <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Calendario digital</h2>
-                                            <p>En este proyecto de un calendario digital, utilicé herramientas como PHP, JavaScript, CSS y HTML para desarrollar una plataforma funcional y dinámica. Implementé características como la posibilidad de añadir eventos, filtrar por categorías, seleccionar fechas específicas y personalizar el diseño del calendario. Durante el desarrollo, aprendí muchísimo sobre la integración de tecnologías del lado del cliente y del servidor, así como sobre la importancia de crear interfaces intuitivas para los usuarios. Este proyecto me permitió mejorar mis habilidades en programación web y en la resolución de problemas.</p>
+                            <div class="project-image-container">
+                                <a href="assets/SistVent.png" class="gallery-item">
+                                    <div class="image-container">
+                                        <img class="img-fluid" src="assets/SistVent.png" alt="Sistema de Ventas" />
+                                        <div class="image-overlay">
+                                            <i class="bi bi-eye"></i>
                                         </div>
-                                        <img class="img-fluid" src="assets/CalDig.png" alt="..." />
                                     </div>
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
+                <!-- Project Card 2-->
+                <div class="card overflow-hidden shadow rounded-4 border-0">
+                    <div class="card-body p-0">
+                        <div class="d-flex align-items-center">
+                            <div class="p-5">
+                                <h2 class="fw-bolder">
+                                    <a href="https://github.com/Alcugan/CalendarioDigital.git">
+                                        Calendario Digital
+                                    </a>
+                                </h2>
+                                <p>En este proyecto de un calendario digital, utilicé herramientas como PHP, JavaScript, CSS y HTML para desarrollar una plataforma funcional y dinámica. Implementé características como la posibilidad de añadir eventos, filtrar por categorías, seleccionar fechas específicas y personalizar el diseño del calendario. Durante el desarrollo, aprendí muchísimo sobre la integración de tecnologías del lado del cliente y del servidor, así como sobre la importancia de crear interfaces intuitivas para los usuarios. Este proyecto me permitió mejorar mis habilidades en programación web y en la resolución de problemas.</p>
+                            </div>
+                            <div class="project-image-container">
+                                <a href="assets/CalDig.png" class="gallery-item">
+                                    <div class="image-container image-with-border">
+                                        <img class="img-fluid" src="assets/CalDig.png" alt="Calendario Digital" />
+                                        <div class="image-overlay">
+                                            <i class="bi bi-eye"></i>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
             <!-- Call to action section-->
             <section class="py-5 bg-gradient-primary-to-secondary text-white">
                 <div class="container px-5 my-5">
@@ -84,7 +114,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Álvaro Radu - Portfolio</div></div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Álvaro Radu - Portfolio 2025</div></div>
                     <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
@@ -99,5 +129,20 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <!-- Simple Lightbox JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.min.js"></script>
+        <!-- Inicializar Simple Lightbox -->
+        <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            new SimpleLightbox('.gallery-item', {
+            captionsData: 'alt',
+            captionDelay: 250,
+            animationSpeed: 250,
+            closeText: '×',
+            navText: ['←','→'],
+            showCounter: true
+             });
+        });
+        </script>
     </body>
 </html>
