--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Curriculum</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projectos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
@@ -47,7 +47,7 @@
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Aplicar mis conocimientos y crecer</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">CV</a>
-                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projectos</a>
+                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Proyectos</a>
                                 </div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                                 <p class="lead fw-light mb-4">Busco una oportunidad de prácticas donde seguir creciendo como desarrollador. <br>
                                     Soy una persona responsable, con muchas ganas de mejorar y aprender del equipo.<br>
                                     Nivel de inglés B2, ideal para entornos técnicos y comunicarme en contextos profesionales. 
-                                    <br>Tanto aquí como en mi GitHub podrás encontrar mis projectos.</p>
+                                    <br>Tanto aquí como en mi GitHub podrás encontrar mis proyectos.</p>
                                 <p class="text-muted">Java, SpringBoot, Python, Kotlin, MySQL, HTML5, CSS3, JavaScript, PHP, BootStrap, Android Stuido, Git/Github, Office 365, Cisco Packet Tracer, Software de Virtualización, VSC.  </p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://github.com/Alcugan"><i class="bi bi-github"></i></a>
